--- a/2DGame/02-Bubble/02-Bubble/02-Bubble.vcxproj
+++ b/2DGame/02-Bubble/02-Bubble/02-Bubble.vcxproj
@@ -16,6 +16,7 @@
     <ClInclude Include="Ball.h" />
     <ClInclude Include="Block.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Kame.h" />
     <ClInclude Include="Letter.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Player.h" />
@@ -37,6 +38,7 @@
     <ClCompile Include="Ball.cpp" />
     <ClCompile Include="Block.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Kame.cpp" />
     <ClCompile Include="Letter.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Menu.cpp" />
